[gd_scene load_steps=20 format=2]

[ext_resource path="res://raw/muzzle-laser/sprite_2.png" type="Texture" id=1]
[ext_resource path="res://raw/engine flare/sprite_1.png" type="Texture" id=2]
[ext_resource path="res://raw/muzzle-laser/sprite_0.png" type="Texture" id=3]
[ext_resource path="res://raw/engine flare/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://raw/muzzle-laser/sprite_1.png" type="Texture" id=5]
[ext_resource path="res://raw/playership.png" type="Texture" id=6]
[ext_resource path="res://raw/muzzle-laser/sprite_3.png" type="Texture" id=7]
[ext_resource path="res://raw/muzzle-laser/sprite_4.png" type="Texture" id=8]
[ext_resource path="res://scenes/Ships/Playership.gd" type="Script" id=9]
[ext_resource path="res://scripts/gp_damage.gd" type="Script" id=10]
[ext_resource path="res://scenes/Bullets/LaserBolt_blue.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/weapon_base.gd" type="Script" id=12]
[ext_resource path="res://sound/wepon/blue-2.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/wepon/blue-3.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/wepon/blue-1.wav" type="AudioStream" id=15]
[ext_resource path="res://scenes/UILayer.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.4472, 13.084 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[node name="Playership" type="KinematicBody2D" groups=[
"PlayerGroup",
]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 9 )
DragCoef = 0.98
Thrust = Vector2( 12, 8 )
Weapons = [ NodePath("Weapon_PlayerShip"), NodePath("Weapon_PlayerShip2") ]
CameraPath = NodePath("Camera2D")

[node name="ShipSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 6 )

[node name="Engine_R" type="Node2D" parent="ShipSprite"]
visible = false
position = Vector2( 4, 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ShipSprite/Engine_R"]
position = Vector2( -0.397758, 2.58545 )
frames = SubResource( 1 )
frame = 1

[node name="Engine_L" type="Node2D" parent="ShipSprite"]
visible = false
position = Vector2( -4, 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ShipSprite/Engine_L"]
position = Vector2( -0.397758, 2.58545 )
frames = SubResource( 1 )
frame = 1

[node name="ShipCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0.795525, 0 )
shape = SubResource( 2 )

[node name="gp_Damage" type="Node" parent="."]
script = ExtResource( 10 )
Health = 1.0
Armor = 0.0
Armor_Factor = 0.0
Shield = 10.0
Shield_Rate = 0.5
Allow_Armor = false

[node name="Weapon_PlayerShip" type="Node2D" parent="."]
position = Vector2( 17.8358, 9.60083 )
rotation = 1.5708
script = ExtResource( 12 )
BulletScene = ExtResource( 11 )
MuzzleSprite = NodePath("../Weapon_PlayerShip/AnimatedSprite")
MuzzleVelocity = 750.0
SoundNodes = [ NodePath("../AudioStreamPlayer2D"), NodePath("../AudioStreamPlayer2D2"), NodePath("../AudioStreamPlayer2D3") ]
AmmoCapacity = 100
RechargeRate = 10.0
RefireDelay = 0.12
ParentShip = NodePath("..")

[node name="AnimatedSprite" type="AnimatedSprite" parent="Weapon_PlayerShip"]
visible = false
position = Vector2( -0.373356, -2.20574 )
frames = SubResource( 3 )

[node name="Weapon_PlayerShip2" type="Node2D" parent="."]
position = Vector2( 17.8358, -10.19 )
rotation = 1.5708
script = ExtResource( 12 )
BulletScene = ExtResource( 11 )
MuzzleSprite = NodePath("AnimatedSprite")
MuzzleVelocity = 750.0
SoundNodes = [ NodePath("../AudioStreamPlayer2D"), NodePath("../AudioStreamPlayer2D2"), NodePath("../AudioStreamPlayer2D3") ]
AmmoCapacity = 100
RechargeRate = 10.0
RefireDelay = 0.12
ParentShip = NodePath("..")

[node name="AnimatedSprite" type="AnimatedSprite" parent="Weapon_PlayerShip2"]
visible = false
position = Vector2( -0.373356, -2.20574 )
frames = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="UILayer" parent="Camera2D" instance=ExtResource( 16 )]
margin_left = -248.0
margin_top = 259.0
margin_right = 251.0
margin_bottom = 331.0
